--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,14 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "json-server --watch db.json --port 9000"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "json-server": "^1.0.0-beta.0"
+    "json-server": "^0.17.4"
   }
 }
